2013-11-06  Mark Kettenis  <kettenis@gnu.org>

	* src/x86/freebsd.S (ffi_call_SYSV): Align the stack pointer to
        16-bytes.

2013-11-06  Konstantin Belousov <kib@freebsd.org>

	* src/x86/freebsd.S (ffi_closure_raw_SYSV): Mark the assembler
	source as not requiring executable stack.

2013-11-02  Anthony Green  <green@moxielogic.com>

	* doc/libffi.texi (The Basics): Clarify return value buffer size
	requirements.  Also, NULL result buffer pointers are no longer
	supported.
	* doc/libffi.info: Rebuilt.

2013-11-02  Mischa Jonker  <mjonker@synopsys.com>

	* Makefile.am (nodist_libffi_la_SOURCES): Fix build error.
	* Makefile.in: Rebuilt.

2013-11-02  David Schneider  <david.schneider@bivab.de>

	* src/arm/ffi.c: more robust argument handling for closures on arm hardfloat
	* testsuite/libffi.call/many_mixed.c: New file.
	* testsuite/libffi.call/cls_many_mixed_args.c: More tests.

2013-11-02  Vitaly Budovski

	* src/x86/ffi.c (ffi_prep_cif_machdep): Don't align stack for win32.

2013-10-23  Mark H Weaver  <mhw@netris.org>

	* src/mips/ffi.c: Fix handling of uint32_t arguments on the
	MIPS N32 ABI.

2013-10-13  Sandra Loosemore  <sandra@codesourcery.com>

	* README: Add Nios II to table of supported platforms.
	* Makefile.am (EXTRA_DIST): Add nios2 files.
	(nodist_libffi_la_SOURCES): Likewise.
	* Makefile.in: Regenerated.
	* configure.ac (nios2*-linux*): New host.
	(NIOS2): Add AM_CONDITIONAL.
	* configure: Regenerated.
	* src/nios2/ffi.c: New.
	* src/nios2/ffitarget.h: New.
	* src/nios2/sysv.S: New.
	* src/prep_cif.c (initialize_aggregate): Handle extra structure
	alignment via FFI_AGGREGATE_ALIGNMENT.
	(ffi_prep_cif_core): Conditionalize structure return for NIOS2.

2013-10-10  Sandra Loosemore  <sandra@codesourcery.com>

	* testsuite/libffi.call/cls_many_mixed_args.c (cls_ret_double_fn):
	Fix uninitialized variable.

2013-10-11  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* testsuite/libffi.call/many.c (many): Replace * with +.
